@@ -20,6 +20,9 @@ Revision history for DBIx::Class
     * Misc
         - Refactored capability handling in Storage::DBI, allows for
           standardized capability handling wrt query/enable/disable
+        - Cleanup of complex resultset update/delete oprations - storage
+          specific code moved back to ResultSet and replaced by checks
+          of storage capabilities
         - Makefile.PL no longer imports GetOptions() to interoperate
           better with Catalyst installers
         - Bumped minimum Module::Install for developers
